// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VirtuosoMockContext > Grid > correctly renders items 1`] = `
<div>
  <div
    data-test-id="virtuoso-scroller"
    data-virtuoso-scroller="true"
    style="height: 100%; outline: none; overflow-y: auto; position: relative;"
    tabindex="0"
  >
    <div
      style="width: 100%; height: 100%; position: absolute; top: 0px;"
    >
      <div
        class="virtuoso-grid-list"
        data-testid="virtuoso-item-list"
        style="padding-top: 0px; padding-bottom: 100px;"
      >
        <div
          class="virtuoso-grid-item"
          data-index="0"
        >
          Item 0
        </div>
        <div
          class="virtuoso-grid-item"
          data-index="1"
        >
          Item 1
        </div>
        <div
          class="virtuoso-grid-item"
          data-index="2"
        >
          Item 2
        </div>
        <div
          class="virtuoso-grid-item"
          data-index="3"
        >
          Item 3
        </div>
        <div
          class="virtuoso-grid-item"
          data-index="4"
        >
          Item 4
        </div>
        <div
          class="virtuoso-grid-item"
          data-index="5"
        >
          Item 5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VirtuosoMockContext > Grid > correctly renders items with useWindowScroll 1`] = `
<div>
  <div
    data-virtuoso-scroller="true"
    style="position: relative; height: 300px;"
  >
    <div
      style="width: 100%; height: 100%; position: absolute; top: 0px;"
    >
      <div
        class="virtuoso-grid-list"
        data-testid="virtuoso-item-list"
        style="padding-top: 0px; padding-bottom: 100px;"
      >
        <div
          class="virtuoso-grid-item"
          data-index="0"
        >
          Item 0
        </div>
        <div
          class="virtuoso-grid-item"
          data-index="1"
        >
          Item 1
        </div>
        <div
          class="virtuoso-grid-item"
          data-index="2"
        >
          Item 2
        </div>
        <div
          class="virtuoso-grid-item"
          data-index="3"
        >
          Item 3
        </div>
        <div
          class="virtuoso-grid-item"
          data-index="4"
        >
          Item 4
        </div>
        <div
          class="virtuoso-grid-item"
          data-index="5"
        >
          Item 5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VirtuosoMockContext > List > correctly renders items 1`] = `
<div>
  <div
    data-test-id="virtuoso-scroller"
    data-virtuoso-scroller="true"
    style="height: 100%; outline: none; overflow-y: auto; position: relative;"
    tabindex="0"
  >
    <div
      data-viewport-type="element"
      style="width: 100%; height: 100%; position: absolute; top: 0px;"
    >
      <div
        data-testid="virtuoso-item-list"
        style="box-sizing: border-box; padding-top: 0px; padding-bottom: 500px; margin-top: 0px;"
      >
        <div
          data-index="0"
          data-item-index="0"
          data-known-size="100"
          style="overflow-anchor: none;"
        >
          Item 0
        </div>
        <div
          data-index="1"
          data-item-index="1"
          data-known-size="100"
          style="overflow-anchor: none;"
        >
          Item 1
        </div>
        <div
          data-index="2"
          data-item-index="2"
          data-known-size="100"
          style="overflow-anchor: none;"
        >
          Item 2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VirtuosoMockContext > List > correctly renders items with useWindowScroll 1`] = `
<div>
  <div
    data-virtuoso-scroller="true"
    style="position: relative; height: 800px;"
  >
    <div
      data-viewport-type="window"
      style="width: 100%; height: 100%; position: absolute; top: 0px;"
    >
      <div
        data-testid="virtuoso-item-list"
        style="box-sizing: border-box; padding-top: 0px; padding-bottom: 500px; margin-top: 0px;"
      >
        <div
          data-index="0"
          data-item-index="0"
          data-known-size="100"
          style="overflow-anchor: none;"
        >
          Item 0
        </div>
        <div
          data-index="1"
          data-item-index="1"
          data-known-size="100"
          style="overflow-anchor: none;"
        >
          Item 1
        </div>
        <div
          data-index="2"
          data-item-index="2"
          data-known-size="100"
          style="overflow-anchor: none;"
        >
          Item 2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VirtuosoMockContext > Table > correctly renders items 1`] = `
<div>
  <div
    data-test-id="virtuoso-scroller"
    data-virtuoso-scroller="true"
    style="height: 100%; outline: none; overflow-y: auto; position: relative;"
    tabindex="0"
  >
    <div
      data-viewport-type="element"
      style="width: 100%; height: 100%; position: absolute; top: 0px;"
    >
      <table
        style="border-spacing: 0; overflow-anchor: none;"
      >
        <tbody
          data-test-id="virtuoso-item-list"
        >
          <tr
            data-index="0"
            data-item-index="0"
            data-known-size="100"
            style="overflow-anchor: none;"
          >
            <td>
              Item $
              0
            </td>
          </tr>
          <tr
            data-index="1"
            data-item-index="1"
            data-known-size="100"
            style="overflow-anchor: none;"
          >
            <td>
              Item $
              1
            </td>
          </tr>
          <tr
            data-index="2"
            data-item-index="2"
            data-known-size="100"
            style="overflow-anchor: none;"
          >
            <td>
              Item $
              2
            </td>
          </tr>
          <tr>
            <td
              style="height: 500px; padding: 0px; border: 0px;"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`VirtuosoMockContext > Table > correctly renders items with useWindowScroll 1`] = `
<div>
  <div
    data-virtuoso-scroller="true"
    style="position: relative; height: 800px;"
  >
    <div
      data-viewport-type="window"
      style="width: 100%; height: 100%; position: absolute; top: 0px;"
    >
      <table
        style="border-spacing: 0; overflow-anchor: none;"
      >
        <tbody
          data-test-id="virtuoso-item-list"
        >
          <tr
            data-index="0"
            data-item-index="0"
            data-known-size="100"
            style="overflow-anchor: none;"
          >
            <td>
              Item $
              0
            </td>
          </tr>
          <tr
            data-index="1"
            data-item-index="1"
            data-known-size="100"
            style="overflow-anchor: none;"
          >
            <td>
              Item $
              1
            </td>
          </tr>
          <tr
            data-index="2"
            data-item-index="2"
            data-known-size="100"
            style="overflow-anchor: none;"
          >
            <td>
              Item $
              2
            </td>
          </tr>
          <tr>
            <td
              style="height: 500px; padding: 0px; border: 0px;"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
